--- a/TaiwanPlantApplication/app/build.gradle
+++ b/TaiwanPlantApplication/app/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.support:recyclerview-v7:27.1.1'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'pub.devrel:easypermissions:0.3.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
 }
 apply plugin: 'com.google.gms.google-services'
