--- a/TaiwanPlantApplication/app/src/main/AndroidManifest.xml
+++ b/TaiwanPlantApplication/app/src/main/AndroidManifest.xml
@@ -3,20 +3,30 @@
     package="com.example.taiwanplantapplication">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:screenOrientation="portrait"
         android:theme="@style/AppTheme">
+        <activity android:name=".activity.SelectedPhotoActivity"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".activity.CameraActivity"
+            android:theme="@style/WelcomeTheme" />
         <activity
             android:name=".activity.PlantsInfoActivity"
-            android:theme="@style/AddPlantTitleTheme"></activity>
+            android:theme="@style/AddPlantTitleTheme" />
         <activity
             android:name=".activity.AddPlantActivity"
-            android:theme="@style/AddPlantTitleTheme"></activity>
+            android:theme="@style/AddPlantTitleTheme" />
         <activity android:name=".activity.CardViewActivity" />
         <activity
             android:name=".activity.WelcomeActivity"
@@ -36,8 +46,17 @@
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_provider_paths"></meta-data>
+        </provider>
     </application>
 
 </manifest>
